--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
+    "scrape": "node scrape.js",
+    "import": "node import.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,6 +14,8 @@
   "description": "",
   "dependencies": {
     "apify-client": "^2.22.1",
-    "dotenv": "^17.3.1"
+    "better-sqlite3": "^12.6.2",
+    "dotenv": "^17.3.1",
+    "express": "^5.2.1"
   }
 }
