--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "apify-client": "^2.22.1",
     "better-sqlite3": "^12.6.2",
     "dotenv": "^17.3.1",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "openai": "^6.22.0"
   }
 }
